--- a/style.css
+++ b/style.css
@@ -1,49 +1,63 @@
 body {
-    /* font-family: 'Roboto', 'Mono', 'Medium';
-    position: absolute; */
     font-size: 110%;
-    /* scroll-behavior: unset; */
     width: 98%;
     overflow-x: hidden;
-}
-
-h1, h2, h3, p, a, .block {
     text-align: center;
 }
 
-
-/* header {
-    width: 100%;
-} */
-
-h1 {
-    display: inline-block;
-    text-transform: uppercase;
+h1,
+h2,
+h3,
+p,
+a,
+.block {
+    text-align: center;
 }
 
-#h1 {
-    /* display: inline-block; */
-    height: 3vw;
-    width: 25vw;
-}
-
-#h1:hover {
-    height: 3.5vw;
-}
 @media screen and (min-width: 1220px) {
+    h1 {
+        display: inline-block;
+        text-transform: uppercase;
+    }
+
+    #h1 {
+        height: 3vw;
+        width: 27vw;
+    }
+
+    #h1:hover {
+        height: 3.5vw;
+    }
+
+    h2:hover,
+    h3:hover,
+    p:hover,
+    a:hover,
+    li:hover {
+        display: inline-block;
+        max-width: 65vw;
+        color: white;
+        background-color: green;
+        box-shadow: 0 0 1.5rem 1rem green;
+        border: 1px solid white;
+        cursor: pointer;
+    }
+
+    h3 {
+        display: block;
+        width: 33vw;
+    }
 
     .cv {
         position: fixed;
         max-width: 33vw;
-        /* max-height: 75vh; */
         right: 0;
         top: 0;
-        /* background-color: green; */
         border: 1px solid green;
         display: flex;
         justify-content: center;
         align-items: center;
-        
+
     }
 
     .block {
@@ -53,57 +67,104 @@ h1 {
         display: flex;
         align-items: center;
         justify-content: center;
-        /* flex-wrap: wrap; */
-        
     }
-    
-    
+
+    .phrase {
+        width: 65vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1:hover {
+        display: inline-block;
+        width: 25vw;
+        color: white;
+        background-color: green;
+        box-shadow: 0 0 1.5rem 1rem green;
+        /* color: black; */
+        border: 1px solid white;
+        cursor: pointer;
+    }
+
+    .cv h1 {
+        vertical-align: middle;
+        display: flex;
+        height: 1.5vw;
+        margin-top: 5vh;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 @media screen and (max-width: 1220px) {
+    .last {
+        padding-bottom: 10rem;
+    }
 
     .cv {
         position: fixed;
-        /* max-width: 33vw; */
-        /* max-height: 75vh; */
+        width: 98vw;
         left: 0;
         bottom: 0;
-        /* background-color: green; */
         border: 1px solid green;
         display: flex;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         background-color: #000;
         z-index: 5;
-        
+        max-width: 98vw;
     }
 
     .block {
         margin: 1vw;
-        width: 90%;
+        width: 95%;
         border: 1px solid green;
         display: flex;
         align-items: center;
         justify-content: center;
-        /* flex-wrap: wrap; */
-        
     }
-    
-    
-    
-}
 
-.cv h1 {
-    vertical-align: middle;
-    display: flex;
-    height: 1.5vw;
-    margin: 0 50%;
-    margin-top: 5vh;
-    /* display: block; */
-    /* height: 3vw; */
- 
-    align-items: center;
-    justify-content: center;
+    .phrase {
+        width: 98vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        display: inline-block;
+        text-transform: uppercase;
+    }
+
+    #h1 {
+        height: 3vw;
+    }
+
+    #h1:hover {
+        height: 3.5vw;
+    }
+
+    h1:hover {
+        display: inline-block;
+        max-width: 25vw;
+        color: white;
+        background-color: green;
+        box-shadow: 0 0 1.5rem 1rem green;
+        border: 1px solid white;
+        cursor: pointer;
+    }
+
+    .cv h1 {
+        display: flex;
+        height: 1.5vw;
+        margin-top: 5vh;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 div {
@@ -111,43 +172,19 @@ div {
     flex-direction: column;
 }
 
-
-
 .cv * {
     font-size: 110%;
 }
 
-.cv > p:hover {
+.cv>p:hover {
     background-color: white;
     color: black;
 }
 
-
-h1:hover, h2:hover, h3:hover, p:hover, a:hover, li:hover  {
-    display: inline-block;
-    max-width: 65vw;
-    color: white;
-    background-color:  green;
-    box-shadow: 0 0 1.5rem 1rem green;
-    /* color: black; */
-    border: 1px solid white;
-    cursor: pointer;
-}
-
-h3 {
-    display: block;
-    width: 30vw;
-}
-
-
 li {
     list-style: none;
-    /* display: flex; */
 }
-/* li {
-    display: flex;
-    flex-direction: row;
-} */
+
 ul {
     display: flex;
     flex-wrap: wrap;
@@ -163,8 +200,6 @@ ul {
     align-items: center;
     width: fit-content;
     flex-wrap: wrap;
-    /* height: 5vw;
-    width: 5vw; */
 }
 
 #icons a {
@@ -184,9 +219,13 @@ ul {
 
 a {
     text-decoration: none;
+    margin: 0.5vw;
+    color: white;
+    font-weight: 900;
+    font-family: cursive;
 }
 
-li > a:hover {
+li>a:hover {
     background-color: white;
     color: black;
     text-shadow: 0 0 0.5rem green;
@@ -196,98 +235,22 @@ li > a:hover {
     -ms-border-radius: 0.5vw;
     -o-border-radius: 0.5vw;
 }
-/* 
-ul {
-  list-style-image: url();  
-} */
-/* li > a:hover {
-    list-style: disc;
-    color: brown;
-} */
-/* h2:hover {
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-h3:hover {
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-p:hover {
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-
-a:hover {
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-
-p:hover { 
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-
-li:hover {
-    display: inline-block;
-    width: 100%;
-    background-color: white;
-    color: black;
-} */
-
-
-/* .phrase > p {
-    display: block;
-    position: relative;
-    text-align: center;
-} */
-
-.phrase {
-    width: 60vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
 p {
     display: inline-block;
     position: relative;
-    /* width: 65%; */
-    /* width: 50%; */
-
 }
 
-a {
-    color: white;
-    font-weight: 900;
-    /* font-size: 1rem; */
-    font-family: cursive;
-}
 li:hover {
     color: black;
 }
-/* 
-#cv {
-    height: 75%;
-
-} */
 
 header p {
     display: block;
     height: 0.5;
     line-height: 0.8;
     gap: 0.5;
-    margin: 0.25vw;
+    margin: 0.35vw;
 }
 
 img {
