--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ a,
 }
 
 @media screen and (min-width: 1220px) {
+
+
+    body {
+        font-size: 110%;
+        width: 98%;
+        overflow-x: hidden;
+        text-align: center;
+    }
+
     h1 {
         display: inline-block;
         text-transform: uppercase;
@@ -99,6 +108,14 @@ a,
 }
 
 @media screen and (max-width: 1220px) {
+
+    body {
+        font-size: 90%;
+        width: 98%;
+        overflow-x: hidden;
+        text-align: center;
+    }
+
     .last {
         padding-bottom: 10rem;
     }
