--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a,
     text-align: center;
 }
 
-@media screen and (min-width: 1220px) {
+@media screen and (min-width: 1220px) or (orientation: landscape) {
 
 
     body {
