--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ a,
     text-align: center;
 }
 
+
+
 @media screen and (min-width: 1220px) and (orientation: landscape) {
 
 
@@ -286,3 +288,9 @@ h3 {
     -ms-border-radius: 0.5vw;
     -o-border-radius: 0.5vw;
 }
+
+@media only screen and (orientation: landscape) {
+    body {
+      background-color: lightblue;
+    }
+  }
