--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a,
 
 
 
-@media screen and (min-width: 1220px) and (orientation: landscape) {
+@media screen and (min-width: 1220px) {
 
 
     body {
@@ -290,7 +290,7 @@ h3 {
 }
 
 @media only screen and (orientation: landscape) {
-    body {
+    body * {
       background-color: lightblue;
     }
   }
