--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a,
 
 
 
-@media screen and (min-width: 1220px) {
+@media only screen and (orientation: landscape) {
 
 
     body {
@@ -289,8 +289,8 @@ h3 {
     -o-border-radius: 0.5vw;
 }
 
-@media only screen and (orientation: landscape) {
+/* @media only screen and (orientation: landscape) {
     body * {
       background-color: lightblue;
     }
-  }
+  } */
