--- a/style.css
+++ b/style.css
@@ -16,14 +16,12 @@ a,
     flex-direction: column;
 }
 
-/* div {
+.centered {
     display: flex;
-    flex-direction: column;
-} */
+    justify-content: center;
+    align-items: center;
+}
 
-/* .cv {
-    opacity: 0.5;
-} */
 
 .project_scratch {
     width: 68vw;
@@ -44,8 +42,6 @@ a,
 }
 
 @media only screen and (orientation: landscape) {
-
-
     body {
         font-size: 110%;
         width: 100%;
@@ -89,8 +85,6 @@ a,
     .cv {
         position: relative;
         max-width: 100%;
-        /* right: 0;
-        top: 0; */
         border: 1px solid green;
         display: flex;
         justify-content: center;
@@ -145,15 +139,9 @@ a,
         text-align: center;
     }
 
-    /* .last {
-        padding-bottom: 10rem;
-    } */
-
     .cv {
         position: relative;
         width: 100%;
-        /* left: 0;
-        bottom: 0; */
         border: 1px solid green;
         display: flex;
         flex-direction: row;
@@ -226,8 +214,6 @@ a,
         justify-content: center;
     }
 }
-
-
 
 .cv * {
     font-size: 110%;
@@ -326,9 +312,102 @@ h3 {
     -ms-border-radius: 0.5vw;
     -o-border-radius: 0.5vw;
 }
+:root {
+    --side: min(100vw, 100vh);
+    --side_50: min(50vw, 50vh);
+    --s_div_100: calc(var(--side)/100);
+}
 
-/* @media only screen and (orientation: landscape) {
-    body * {
-      background-color: lightblue;
-    }
-  } */
+#logo_wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo {
+    
+    /* width: 100%;
+    height: 100vw; */
+    /* --side: min(100vw, 100vh); */
+    height: var(--side_50);
+    width: var(--side_50);
+    margin-top: calc(25 * var(--s_div_100));
+    display: flex;
+    flex-wrap: wrap;
+
+    
+}
+
+#logo div {
+    /* --side_div_100: min(100vw, 100vh) / 100;
+    height: var(--side_div_100);
+    width: var(--side_div_100); */
+    margin: 0;
+    padding: 0;
+    /* max-height: 1ch;
+    max-width: 1ch; */
+    width: var(--s_div_100);
+    height: var(--s_div_100);
+    background-color: white;
+    /* border: 1px solid gray; */
+}
+
+#timer,
+#timer_2,
+#text,
+#text_2 {
+    /* text-align: center; */
+    /* width: 82%; */
+    height: 6vw;
+    font-size: 3vh;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 1vw;
+    /* align-items: center; */
+    /* text-shadow: 1vh 1vh 1vh rgba(255, 255, 0, 1), -1vh -1vh 1vh rgba(0, 0, 255, 1), -1vh 1vh 1.5vh rgba(255, 165, 0, 1), 1vh -1vh 2vh rgb(0, 128, 0, 1); */
+}
+
+
+#main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: darkgray;
+    opacity: 0.9;
+}
+
+#main * {
+    color: white;
+}
+
+
+.mirrored {
+    display: block;
+    transform: scale(1, -1);
+    -webkit-transform: scale(1, -1);
+    -moz-transform: scale(1, -1);
+    -ms-transform: scale(1, -1);
+    -o-transform: scale(1, -1);
+    opacity: 0.5;
+    font-size: 100%;
+    text-shadow: 0 0 1vh whitesmoke;
+}
+
+/* #logo::before {
+    display: block;
+    align-items: none;
+    justify-content: flex-start;
+    content: "*";
+    color: white;
+    left: 0;
+    top: 0;
+    right: 100%;
+    position: relative;
+} */
