--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
     --side: min(100vw, 100vh);
-    --side_50: min(50vw, 50vh);
-    --s_div_100: calc(var(--side)/100);
+    --side_75: min(75vw, 75vh);
+    --s_div_50: calc((var(--side)/100)*2);
+    --s_div_100: calc((var(--side)/100));
 }
 
 body {
@@ -60,9 +61,9 @@ a,
     /* width: 100%;
     height: 100vw; */
     /* --side: min(100vw, 100vh); */
-    height: var(--side_50);
-    width: var(--side_50);
-    margin-top: calc(25 * var(--s_div_100));
+    height: var(--side);
+    width: var(--side);
+    /* margin-top: calc(5 * var(--s_div_50)); */
     display: flex;
     flex-wrap: wrap;
 
@@ -77,10 +78,19 @@ a,
     padding: 0;
     /* max-height: 1ch;
     max-width: 1ch; */
-    width: var(--s_div_100);
-    height: var(--s_div_100);
+    width: var(--s_div_50);
+    height: var(--s_div_50);
     background-color: white;
     /* border: 1px solid gray; */
+}
+
+.shadowed {
+    border-radius: var(--s_div_100);
+    -webkit-border-radius: var(--s_div_100);
+    -moz-border-radius: var(--s_div_100);
+    -ms-border-radius: var(--s_div_100);
+    -o-border-radius: var(--s_div_100);
+    box-shadow: 0px 0px 24px 6px white !important;
 }
 
 #timer,
@@ -216,9 +226,9 @@ a,
         align-items: center;
         justify-content: center;
     }
-    #logo {
-        margin-top: calc(10 * var(--s_div_100));
-    }
+    /* #logo {
+        margin-top: calc(5 * var(--s_div_100));
+    } */
 }
 
 @media screen and (max-width: 720px) {
