--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a,
     /* text-align: center; */
     /* width: 82%; */
     /* height: 6vw; */
-    font-size: 7vh;
+    font-size: 150%;
     font-weight: 900;
     display: flex;
     justify-content: center;
@@ -129,7 +129,7 @@ a,
     align-items: center;
     justify-content: space-around;
     box-shadow: 0 0 15px 15px whitesmoke;
-    /* background-color: rgb(49, 49, 49); */
+    background-color: rgb(49, 49, 49);
     opacity: 0.8;
 }
 
@@ -138,7 +138,7 @@ a,
 }
 
 #main_menu * {
-    font-size: 5vh;
+    font-size: 150%;
     opacity: 0.5;
 }
 
@@ -156,6 +156,12 @@ a,
 }
 
 @media only screen and (orientation: landscape) {
+
+    #logo_wrapper {
+        margin-bottom: -10%;
+        margin-top: -10%;
+    }
+
     body {
         font-size: 110%;
         width: 100%;
@@ -209,7 +215,7 @@ a,
     .block {
         /* margin: 2%;
         width: 96%; */
-        border: inset 1px solid green;
+        border: 1px solid white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -315,7 +321,7 @@ a,
     a:hover,
     li:hover {
         display: inline-block;
-        max-width: 65ch;
+        /* max-width: 65ch; */
         color: white;
         background-color: green;
         box-shadow: 0 0 1.5rem 1rem green;
