--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body * {
     padding: 0;
 }
 
-h1,
-h2,
+#h1,
+#h2,
 h3,
 p,
 a,
@@ -169,7 +169,7 @@ a,
         text-align: center;
     }
 
-    h1 {
+    #h1 {
         display: inline-block;
         text-transform: uppercase;
     }
@@ -183,7 +183,7 @@ a,
         height: 3.5ch;
     }
 
-    h2:hover,
+    #h2:hover,
     h3:hover,
     p:hover,
     a:hover,
@@ -229,7 +229,7 @@ a,
         align-items: center;
     }
 
-    h1:hover {
+    #h1:hover {
         display: inline-block;
         width: 25vw;
         color: white;
@@ -240,7 +240,7 @@ a,
         cursor: pointer;
     }
 
-    .cv h1 {
+    .cv #h1 {
         vertical-align: middle;
         display: flex;
         height: 1.5vw;
@@ -292,7 +292,7 @@ a,
         align-items: center;
     }
 
-    h1 {
+    #h1 {
         display: inline-block;
         text-transform: uppercase;
     }
@@ -305,7 +305,7 @@ a,
         height: 3.5vw;
     }
 
-    h1:hover {
+    #h1:hover {
         display: inline-block;
         max-width: 25vw;
         color: white;
@@ -315,7 +315,7 @@ a,
         cursor: pointer;
     }
 
-    h2:hover,
+    #h2:hover,
     h3:hover,
     p:hover,
     a:hover,
@@ -329,7 +329,7 @@ a,
         cursor: pointer;
     }
 
-    .cv h1 {
+    .cv #h1 {
         display: flex;
         height: 1.5vw;
         margin-top: 5vh;
