--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ a,
     -o-border-radius: var(--s_div_100);
     box-shadow: 0px 0px 24px 6px white !important;
 }
+.main_timers {
+    width: 33vw;
+}
 
 #timer,
 #timer_2,
@@ -111,8 +114,9 @@ a,
     font-weight: 900;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    /* margin: 1vw; */
+    align-items: center;
+    margin: 1vw;
+    /* width: 25%; */
     /* align-items: center; */
     /* text-shadow: 1vh 1vh 1vh rgba(255, 255, 0, 1), -1vh -1vh 1vh rgba(0, 0, 255, 1), -1vh 1vh 1.5vh rgba(255, 165, 0, 1), 1vh -1vh 2vh rgb(0, 128, 0, 1); */
 }
@@ -277,6 +281,7 @@ a,
 
     .block {
         /* margin: 1vw; */
+
         width: 100%;
         box-shadow: inset 0 0 10px 10px whitesmoke;
         display: flex;
@@ -385,7 +390,7 @@ ul {
 
 a {
     text-decoration: none;
-    margin: 0.5vw;
+    margin: 1%;
     color: white;
     font-weight: 900;
     font-family: cursive;
@@ -420,12 +425,18 @@ header p {
 }
 
 img {
-    margin: 0.5vw;
+    margin: 0.5%;
+}
+
+p, a {
+    margin: 1%;
+    padding: 1%;
 }
 
 h3 {
     display: block;
-    margin-top: -1vw;
+    margin-top: -1.5%;
+    /* padding-top: 2%; */
     background-color: white;
     color: #000;
     border: inset 1px solid green;
@@ -434,6 +445,13 @@ h3 {
     -moz-border-radius: 0.5vw;
     -ms-border-radius: 0.5vw;
     -o-border-radius: 0.5vw;
+}
+
+.courses {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: block;
+    /* width: 25%; */
 }
 
 
